gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail60.d
version https://git-lfs.github.com/spec/v1
oid sha256:0679159f117595928b80eee9f66491a219e3bf0cdf1173d6af657c6f4c457cea
size 209
